<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    tools:context=".screen.firstScreen.CheckPalindromeActivity">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_photo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/iv_photo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/palindrome_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/name_input_layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_palindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/palindrome"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/green_cool"
        app:layout_constraintStart_toStartOf="@id/palindrome_input_layout"
        app:layout_constraintEnd_toEndOf="@id/palindrome_input_layout"
        app:layout_constraintTop_toBottomOf="@id/palindrome_input_layout"
        android:text="@string/check"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_cool"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/palindrome_input_layout"
        app:layout_constraintEnd_toEndOf="@id/palindrome_input_layout"
        app:layout_constraintTop_toBottomOf="@id/btn_check"
        android:text="@string/next"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>